# payday-finance-app

./: .env.example  .gitignore  AGENTS.md  README.md  app.py  pyproject.toml  requirements.txt  ui.py
docs/: architecture.md  finance-rules.md  product-brief.md
src/: allocator.py  config.py  constants.py  finance_engine.py  models.py  reporting.py  storage.py  validators.py
tests/: test_allocator.py  test_finance_engine.py  test_validators.py
